--- a/theme-editor.html
+++ b/theme-editor.html
@@ -50,7 +50,6 @@
         .credits a:hover { color: #6366f1; }
         .logo-preview { max-width: 100%; max-height: 60px; margin-top: 0.5rem; border: 1px solid #e5e7eb; border-radius: 4px; padding: 0.25rem; }
         .color-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 0.5rem; }
-        .position-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 0.75rem; }
         .form-select { width: 100%; padding: 0.5rem 0.75rem; border-radius: 6px; border: 1px solid #d1d5db; background: #ffffff; color: #1f2937; font-size: 0.85rem; cursor: pointer; }
         .form-select:focus { outline: none; border-color: #6366f1; }
         ::-webkit-scrollbar { width: 8px; }
@@ -100,12 +99,12 @@
         // PREVIEW COMPONENT
         // ============================================================
         const Preview = ({ theme }) => {
-            const brandPos = theme.brand.position || { vertical: 'top', horizontal: 'right' };
             const fontKey = theme.typography?.fontFamily || 'system';
             const font = fontOptions[fontKey] || fontOptions['system'];
             const googleFontLink = font.google
                 ? `<link href="https://fonts.googleapis.com/css2?family=${font.name.replace(/ /g, '+')}:wght@400;500;600;700&display=swap" rel="stylesheet">`
                 : '';
+            const hasBrand = theme.brand.name || theme.brand.logo;
 
             const previewStyles = `
                 body {
@@ -113,7 +112,7 @@
                     color: ${theme.colors.text};
                     font-family: ${font.family};
                     padding: 2rem;
-                    padding-top: ${brandPos.vertical === 'top' && (theme.brand.name || theme.brand.logo) ? '4rem' : '2rem'};
+                    padding-top: ${hasBrand ? '4rem' : '2rem'};
                     margin: 0;
                     min-height: 100vh;
                     position: relative;
@@ -122,17 +121,31 @@
                 p { color: ${theme.colors.textSecondary}; line-height: 1.6; margin-bottom: 1rem; }
                 .brand {
                     position: fixed;
+                    top: 0.5rem;
+                    right: 1rem;
                     display: flex;
                     align-items: center;
                     gap: 0.75rem;
                     padding: 0.5rem;
-                    ${brandPos.vertical === 'top' ? 'top: 0.5rem;' : 'bottom: 0.5rem;'}
-                    ${brandPos.horizontal === 'left' ? 'left: 1rem;' : brandPos.horizontal === 'center' ? 'left: 50%; transform: translateX(-50%);' : 'right: 1rem;'}
                 }
                 .brand img { height: 32px; }
                 .brand span { color: ${theme.colors.text}; font-weight: 500; }
                 .brand a { color: ${theme.colors.text}; text-decoration: none; }
                 .brand a:hover { color: ${theme.colors.accent}; }
+                .scenario-title {
+                    position: fixed;
+                    top: 0.75rem;
+                    left: 1rem;
+                    color: ${theme.colors.text};
+                    font-weight: 500;
+                }
+                .progress {
+                    position: fixed;
+                    bottom: 0.75rem;
+                    left: 1rem;
+                    color: ${theme.colors.textMuted};
+                    font-size: 0.875rem;
+                }
                 .choices { display: flex; gap: 1rem; flex-wrap: wrap; margin: 1.5rem 0; }
                 .btn { padding: 0.75rem 1.25rem; border-radius: 10px; border: none; cursor: pointer; font-size: 0.9rem; }
                 .btn-choice { background: ${theme.buttons.choiceBackground}; color: ${theme.buttons.choiceText}; }
@@ -159,7 +172,8 @@
                     <style>${previewStyles}</style>
                 </head>
                 <body>
-                    ${theme.brand.name || theme.brand.logo ? `
+                    <div class="scenario-title">Sample Scenario</div>
+                    ${hasBrand ? `
                         <div class="brand">
                             ${theme.brand.logo ? (theme.brand.website
                                 ? `<a href="${theme.brand.website}" target="_blank"><img src="${theme.brand.logo}" alt="Logo"></a>`
@@ -171,6 +185,7 @@
                             : ''}
                         </div>
                     ` : ''}
+                    <div class="progress">Step 3 / 11</div>
                     <h1>Welcome to the Scenario</h1>
                     <p>This is a preview of how your theme will look in the navigator. The colors and branding you configure will be applied throughout the interface.</p>
 
@@ -257,17 +272,6 @@
 
             const updateBrand = (key, value) => {
                 setTheme(prev => ({ ...prev, brand: { ...prev.brand, [key]: value } }));
-                setHasChanges(true);
-            };
-
-            const updateBrandPosition = (key, value) => {
-                setTheme(prev => ({
-                    ...prev,
-                    brand: {
-                        ...prev.brand,
-                        position: { ...prev.brand.position, [key]: value }
-                    }
-                }));
                 setHasChanges(true);
             };
 
@@ -382,31 +386,9 @@
                                         placeholder="https://example.com"
                                     />
                                 </div>
-                                <div className="position-grid">
-                                    <div className="form-group">
-                                        <label className="form-label">Vertical Position</label>
-                                        <select
-                                            className="form-select"
-                                            value={theme.brand.position?.vertical || 'top'}
-                                            onChange={(e) => updateBrandPosition('vertical', e.target.value)}
-                                        >
-                                            <option value="top">Top</option>
-                                            <option value="bottom">Bottom</option>
-                                        </select>
-                                    </div>
-                                    <div className="form-group">
-                                        <label className="form-label">Horizontal Position</label>
-                                        <select
-                                            className="form-select"
-                                            value={theme.brand.position?.horizontal || 'right'}
-                                            onChange={(e) => updateBrandPosition('horizontal', e.target.value)}
-                                        >
-                                            <option value="left">Left</option>
-                                            <option value="center">Center</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </div>
-                                </div>
+                                <p style={{ fontSize: '0.75rem', color: '#6b7280', marginTop: '0.5rem' }}>
+                                    Brand is displayed in the top-right corner of the navigator.
+                                </p>
                             </div>
 
                             {/* Typography Section */}
