Style resources title: bold (800) with text color

--- a/navigator.html
+++ b/navigator.html
@@ -43,7 +43,7 @@
         .back-button:hover { background: color-mix(in srgb, var(--accent) 10%, transparent); border-color: var(--accent); color: var(--accent-hover); }
         .back-button svg { width: 16px; height: 16px; }
         .resources-section { margin-top: 2rem; padding-top: 1.5rem; border-top: 1px solid var(--border); }
-        .resources-title { color: var(--text-muted); font-size: 0.875rem; margin-bottom: 1rem; text-transform: uppercase; letter-spacing: 0.05em; }
+        .resources-title { color: var(--text); font-size: 0.875rem; margin-bottom: 1rem; text-transform: uppercase; letter-spacing: 0.05em; font-weight: 800; }
         .resource-link { display: inline-flex; align-items: center; gap: 0.5rem; color: var(--accent-hover); text-decoration: none; padding: 0.5rem 1rem; background: color-mix(in srgb, var(--accent) 8%, transparent); border-radius: 6px; margin-right: 0.75rem; margin-bottom: 0.75rem; transition: all 0.3s ease; }
         .resource-link:hover { background: color-mix(in srgb, var(--accent) 15%, transparent); }
         .map-overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: var(--bg); z-index: 200; display: flex; flex-direction: column; }
